<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:lineSpacingExtra="-30sp"
            android:text="@string/the_animals_are_starving"
            android:textAlignment="center"
            android:textAppearance="@style/TitleTextStyle" />

        <Button
            android:id="@+id/feed_button"
            android:layout_width="256dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/base_green"
            android:fontFamily="sans-serif-medium"
            android:text="@string/feed_da_dawg"
            android:textSize="19sp" />

        <Button
            android:id="@+id/notify_button"
            android:layout_width="256dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/dark_green"
            android:fontFamily="sans-serif-medium"
            android:text="@string/notify_other_users"
            android:textSize="19sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/manage_button"
            android:layout_width="256dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/base_blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/manage_household"
            android:textSize="19sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/feeding_history_button"
            android:layout_width="256dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/feeding_history"
            android:textSize="19sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/analytics_button"
            android:layout_width="256dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/extra_dark_green"
            android:fontFamily="sans-serif-medium"
            android:text="@string/analytics"
            android:textSize="19sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            >

            <Button
                android:id="@+id/translate_fr_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:fontFamily="sans-serif-medium"
                android:text="@string/french"
                android:textSize="15sp" />

            <Button
                android:id="@+id/translate_en_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:fontFamily="sans-serif-medium"
                android:text="@string/english"
                android:textSize="15sp" />

        </LinearLayout>


        <Button
            android:id="@+id/logoutButton"
            android:layout_width="245dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:fontFamily="sans-serif-medium"
            android:text="@string/logout"
            android:textSize="15sp" />

    </LinearLayout>

</ScrollView>
