<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.MainActivity"
    >

    <!-- One Pet FrameLayout -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Pet Image in the Circle -->
        <ImageView
            android:id="@+id/pet_circle"
            android:layout_width="319dp"
            android:layout_height="310dp"
            android:src="@drawable/circle"
            app:tint="@color/dark_pink" />

        <!-- Pet Info Layout -->
        <LinearLayout
            android:id="@+id/petInfoLayout"
            android:layout_width="318dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pet_image"
                android:layout_width="115dp"
                android:layout_height="108dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/dog_default_icon" />

            <TextView
                android:id="@+id/pet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Stinky Dog"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/fed_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="NOT FED"
                android:textSize="34sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />


            <Button
                android:id="@+id/indicate_fed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="FEED PET"
                android:visibility="visible" />

            <TextView
                android:id="@+id/feeding_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="happy and full :)"
                android:textSize="16sp"
                android:visibility="gone"
                android:textColor="@color/black"
                />

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
