<resources>
    <!-- Define the individual strings -->
    <string name="app_name">The Animals Are Starving</string>
    <string name="title_activity_manage_household">ManageHouseholdActivity</string>
    <string name="fed_text">FED</string>
    <string name="not_fed_text">NOT FED</string>
    <string name="no_logs_text">No Logs Available</string>
    <string name="delete_text">Delete</string>
    <string name="logged_in_text">Logged In</string>
    <string name="edit_text">Edit</string>
    <string name="notify_text">Notify</string>
...
    <string name="analytics">Analytics</string>
    <string name="title_activity_analytics">AnalyticsActivity</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="analytic">Analytics</string>
    <string name="add_new_user">Add New User</string>
    <string name="pet_name">Pet Name</string>


    <!-- Array to hold the keys of all strings you want to translate -->
    <string-array name="all_string_ids">
        <item>@string/app_name</item>
        <item>@string/title_activity_manage_household</item>
...
